--- a/app/src/Home.css
+++ b/app/src/Home.css
@@ -4,11 +4,18 @@
     height: auto;
 }
 
+.welcome-container {
+    display: flex;
+    align-items: center; /* Vertically center child elements */
+    justify-content: center; /* Horizontally center child elements */
+    height: 100%; /* Set height to fill available space */
+}
+
 .welcomeText{
+    font-size: 5em;
     text-align: center;
     position: absolute;
-    top: 30%;
-    left: 30%;
-    font-size: 5em;
-
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);   
 }
