--- a/app/src/App.css
+++ b/app/src/App.css
@@ -50,3 +50,17 @@ thead{
   background-color: #006DCC;
   color: white;
 }
+
+
+
+fieldset{
+  text-align: center !important;
+  border: 1px solid black !important;
+  margin-bottom: 50px !important;
+}
+
+legend {
+  float: none !important;
+  width: auto !important;
+  margin-bottom: 20px !important;
+}
